--- a/genweb/core/static/fontello-genweb/css/fontello.css
+++ b/genweb/core/static/fontello-genweb/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('++genweb++static/fontello-genweb/font/fontello.eot?92303461');
-  src: url('++genweb++static/fontello-genweb/font/fontello.eot?92303461#iefix') format('embedded-opentype'),
-       url('++genweb++static/fontello-genweb/font/fontello.woff?92303461') format('woff'),
-       url('++genweb++static/fontello-genweb/font/fontello.ttf?92303461') format('truetype'),
-       url('++genweb++static/fontello-genweb/font/fontello.svg?92303461#fontello') format('svg');
+  src: url('fontello-genweb/font/fontello.eot');
+  src: url('fontello-genweb/font/fontello.eot#iefix') format('embedded-opentype'),
+       url('fontello-genweb/font/fontello.woff') format('woff'),
+       url('fontello-genweb/font/fontello.ttf') format('truetype'),
+       url('fontello-genweb/font/fontello.svg#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
