Plantillas interactivas: Añadir botón en el Tiny

--- a/genweb/core/browser/tinytemplates_plugin/css/content.css
+++ b/genweb/core/browser/tinytemplates_plugin/css/content.css
@@ -1,3 +1,7 @@
 .ploneSkin span.mce_plonetemplates {
     background-position:-820px -20px;
 }
+
+.ploneSkin span.mce_gwinteractivetemplates {
+    background-position:-980px -20px;
+}
